start moving to newer java versions